# pystring

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  meson.build  pystring.cpp  pystring.h  pystring.pc.in  test.cpp  unittest.h  wscript
.github/workflows/: ci.yml
cmake/: pystringConfig.cmake.in
